--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,19 +5,43 @@ on:
     branches:
       - main # Or your main branch
 
+permissions:
+  contents: read  # to read the docs and build job
+  pages: write    # to deploy to pages
+  id-token: write # to verify the deployment originates from an appropriate source
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      # Sets up the repository configuration for github pages to be deployed from an action
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      # Run the build
       - name: Setup Node.js
         uses: actions/setup-node@v3
       - name: Install dependencies
         run: npm install
       - name: Build
         run: npm run build
-      - name: Deploy
-        uses: actions/upload-pages-artifact@v2
+      # Creates a correctly compressed archive from the build HTML file, and outputs it as
+      # a `github-pages` artifact
+      - name: Upload static files as artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
+
+  # Deployment job - https://github.com/actions/deploy-pages
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      # Deploys the artifact `github-pages` created by the `upload-pages-artifact` job
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
