--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitepress": "^1.6.4"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
